<resources>
    <string name="app_name">nordside_mobile</string>
    <string name="nomenclature_collection">Коллекции товара</string>
    <string name="nomenclature">Номенклатура</string>
    <string name="Login">Вход</string>
    <string name="registration">Регистрация</string>
    <string name="title_home">Главная</string>
    <string name="title_login">Вход</string>
    <string name="title_cart">Корзина</string>
    <string name="title_category">Категории товаров</string>
    <string name="logo">logo</string>
    <string name="cart">Корзина</string>


    <!--Категории товаров-->
    <string name="categ1">Виниловый сайдинг</string>
    <string name="categ2">Фасадные панели</string>
    <string name="categ3">ПВХ панели</string>
    <string name="categ4">Водосточные системы</string>


    <!--ЛОГИН-->
    <string name="email_empty">Введите email</string>
    <string name="email_incorrect">Некорректный email</string>
    <string name="email_small">Email должен содержать минимум 6 символов</string>
    <string name="password_empty">Введите пароль</string>
    <string name="password_small">Пароль должен содержать минимум 6 символов</string>

    <string name="zero">0.00</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="order">Оформить заказ</string>
    <string name="making_an_order">Оформить заказ</string>
    <string name="buy">Купить</string>
    <string name="all_orders">Ваши заказы</string>
    <string name="totalOrderSumma">"Итого по заказу: "</string>
    <string name="rubles">" руб."</string>
    <string name="selected_order">Ваш заказ</string>
    <string name="order_items">Товары</string>
    <string name="total_order_summa">Итого сумма</string>
    <string name="my_orders">Мои заказы</string>
    <string name="change_password">Сменить пароль</string>
    <string name="personal_page">Личный кабинет</string>
    <string name="make_order">Оформить заказ</string>
    <string name="empty_cart">Пустая корзина</string>

</resources>