<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/fragmentCommon"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/fragmentLogin"
        android:icon="@drawable/outline_person_black_24dp"
        android:title="Профиль" />

    <item
        android:id="@+id/fragmentCart"
        android:icon="@drawable/outline_shopping_cart_black_24dp"
        android:title="@string/title_cart" />
    <item
        android:id="@+id/fragmentOrder"
        android:visible="false"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/order" />
    <item
        android:id="@+id/fragmentAllOrders"
        android:visible="false"
        android:icon="@drawable/icon_buy"
        android:title="@string/buy" />

</menu>