<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tw_fragment_selected_order_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/selected_order"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tw_fragment_selected_order_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/order_items"
        app:layout_constraintTop_toBottomOf="@+id/tw_fragment_selected_order_1" />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_fragment_selected_order"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tw_fragment_selected_order_2"
        />
    <TextView
        android:id="@+id/tw_textView_summa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/total_order_summa"
        app:layout_constraintTop_toBottomOf="@+id/recycler_view_fragment_selected_order"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="126dp" />

</androidx.constraintlayout.widget.ConstraintLayout>