<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tw_fragment_personal_office_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/personal_page"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_fragment_personal_my_orders"
        style="@style/BigButton"
        android:layout_width="382dp"
        android:layout_height="48dp"
        android:text="@string/my_orders"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.089"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tw_fragment_personal_office_1"
        app:layout_constraintVertical_bias="0.021" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_fragment_personal_change_password"
        style="@style/BigButton"
        android:layout_width="382dp"
        android:layout_height="48dp"
        android:text="@string/change_password"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.089"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_fragment_personal_my_orders"
        app:layout_constraintVertical_bias="0.021" />

</androidx.constraintlayout.widget.ConstraintLayout>